--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,6 +8,7 @@ layout: compress
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   {% seo %}
+  {% include head.html %}
   <link rel="stylesheet" href="{{ 'assets/style.css' | relative_url }}">
 </head>
 <body>
